🔨 [chore] PyPI パッケージ名を 'CatDJ' から 'cat-dj' に修正
- PyPI のパッケージ名規則に準拠するため、パッケージ名をハイフン区切りに変更しました。
- これにより、パッケージ名がより一貫性のあるものとなり、ユーザーがパッケージを見つけやすくなります。

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: pypi
-      url: https://pypi.org/p/CatDJ
+      url: https://pypi.org/p/cat-dj
     permissions:
       id-token: write
     steps:
